updated main page link transitions to home and contact, added about page and css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">
+    <div id="top" class="logo">
       The Thinking Dev <span>&lt;/&gt;</span>
     </div>
   </header>
@@ -25,12 +25,12 @@
       </label>
     </div>
     <div class="nav-inner">
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Blogs</a>
+      <a href="#top">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="blogs.html">Blogs</a>
       <a href="#">News</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="about.html">About</a>
+      <a href="#contact-us">Contact</a>
     </div>
   </nav>
 
@@ -45,8 +45,8 @@
     <!-- Welcome Section with full-bleed white background -->
     <section class="welcome">
       <div class="inner">
-        <h2>Welcome</h2>
-        <p>Welcome to The Thinking Dev. Dive right in as we explore the matrix.</p>
+        <h2>The Thinking Dev</h2>
+        <p>Let's dive right in as we explore the matrix.</p>
       </div>
     </section>
 
@@ -87,14 +87,14 @@
     </section>
 
     <!-- Contact Form Section (centered within container) -->
-    <section class="contact-us">
+    <section id="contact-us" class="contact-us">
         <div class="inner">
           <div class="contact-columns">
             <div class="contact-form">
               <!-- Your contact form elements go here -->
               <section class="contact-form">
                 <div class="inner">
-                  <h2>Contact Us</h2>
+                  <h2>Get in touch</h2>
                   <form action="#" method="post">
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
