added news, projects and updated blogs, about and blog posts

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <div class="nav-inner">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="blogs.html">Blogs</a>
-        <a href="#">News</a>
-        <a href="about.html">About</a>
+        <a href="blogs.html">Blog</a>
+        <a href="news.html">News</a>
+        <a href="about.html" class="active">About</a>
         <a href="index.html#contact-us">Contact</a>
       </div>
   </nav>
@@ -43,7 +43,7 @@
         <h2>Where to from here?</h2>
         <p>Explore my latest projects, dive into thought-provoking articles, or reach out directly if you’d like to collaborate, chat about AI and philosophy, or simply connect over shared ideas.</p>
         <p>I’m glad you’re here—let’s journey forward. Build, ponder, and grow. Shape something remarkable, together.</p>
-        <p>[<a href="projects.html">Explore My Projects</a>] | [<a href="blogs.html">Read the Blog</a>] | [<a href="#contact-us">Contact Me</a>]</p>
+        <p>[<a href="projects.html">Explore My Projects</a>] | [<a href="blogs.html">Read the Blog</a>] | [<a href="index.html#contact-us">Contact Me</a>]</p>
       </article>
     </div>
   </section>
