--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -15,8 +15,8 @@
     <div class="nav-inner">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="blogs.html">Blogs</a>
-        <a href="#">News</a>
+        <a href="blogs.html">Blog</a>
+        <a href="news.html">News</a>
         <a href="about.html">About</a>
         <a href="index.html#contact-us">Contact</a>
     </div>
