--- a/blogs.html
+++ b/blogs.html
@@ -15,8 +15,8 @@
     <div class="nav-inner">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="blogs.html">Blogs</a>
-        <a href="#">News</a>
+        <a href="blogs.html" class="active">Blog</a>
+        <a href="news.html">News</a>
         <a href="about.html">About</a>
         <a href="index.html#contact-us">Contact</a>
     </div>
@@ -25,8 +25,8 @@
   <!-- Blogs Section -->
   <section class="blogs">
     <div class="inner">
-      <h1> < / > The Thinking Dev Blog < / > </h1>
-      <p>Welcome to my blog page, where thoughts, insights, and explorations into technology and creativity converge. Stay tuned for updates, tips, and musings on everything from AI to web development!</p>
+      <h1> < / > Code & Virture < / > </h1>
+      <p>Welcome to Code & Virtue, my blog where thoughts, insights, and explorations into technology and creativity converge. Stay tuned for updates, tips, and musings on everything from AI to web development!</p>
       
       <div class="blog-posts">
         <!-- Sample Blog Post Listing -->
