--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="nav-inner">
       <a href="#top">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="blogs.html">Blogs</a>
-      <a href="#">News</a>
+      <a href="blogs.html">Blog</a>
+      <a href="news.html">News</a>
       <a href="about.html">About</a>
       <a href="#contact-us">Contact</a>
     </div>
