added new project pages, updated the index htmls and css

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         <div class="columns">
           <div class="projects-column">
             <h3>Projects</h3>
-            <p>Check out our latest projects that are shaping the future of development. <a href="#">Read More</a></p>
+            <p>Latest project: IMDB rating predictor. <br><br> <a href="projects.html"class="pill-button">Read More</a></p>
           </div>
           <div class="blogs-column">
-            <h3>Blogs</h3>
-            <p>Explore our insightful blogs filled with tips, stories, and tech wisdom. <a href="#">Read More</a></p>
+            <h3>Code & Virtue</h3>
+            <p>Two new blogs: Hello, World & Speak Less.  <br><br> <a href="blogs.html "class="pill-button">Read More</a></p>
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
     <section class="newsletter-signup">
       <div class="inner">
         <h2>Newsletter Sign Up</h2>
-        <form action="#" method="post">
+        <form action="mailto:thethinkingdev@icloud.com" method="post">
           <input type="email" name="newsletter_email" placeholder="Enter your email to subscribe" required>
           <button type="submit">Subscribe</button>
         </form>
@@ -95,7 +95,7 @@
               <section class="contact-form">
                 <div class="inner">
                   <h2>Get in touch</h2>
-                  <form action="#" method="post">
+                  <form action="mailto:thethinkingdev@icloud.com" method="post" enctype="text/plain">
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -110,6 +110,7 @@
                 <li><a href="https://youtube.com/@thethinkingdev">Youtube</a></li>
                 <li><a href="https://x.com/thethinkingdev">X</a></li>
                 <li><a href="https://instagram.com/thethinkingdev">Instagram</a></li>
+                <li><a href="https://linkedin.com/babatopeloko">LinkedIn</a></li>
                 <!-- Add more links as needed -->
               </ul>
             </div>
