--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
         </article>
         
         <!-- Project Snippet 2 -->
-        <article class="project-snippet">
+         <article class="project-snippet">
           <img src="Images/project2.jpg" alt="Project Two Preview">
           <h2>Project Two Title</h2>
           <p>A brief overview of Project Two. Explore how this project leverages cutting-edge technology to achieve [result].</p>
@@ -51,7 +51,7 @@
           <h2>Project Three Title</h2>
           <p>A brief overview of Project Three. Dive into this project that reimagines [concept] with creative coding.</p>
           <a href="project3.html">View Project</a>
-        </article>
+        </article>*/
         
         <!-- Add more project snippets as needed -->
       </div>
