--- a/about.html
+++ b/about.html
@@ -8,8 +8,23 @@
   <link rel="stylesheet" href="about.css">
 </head>
 <body>
-  <!-- Navigation -->
+  <header>
+    <div class="logo">
+      The Thinking Dev <span>&lt;/&gt;</span>
+    </div>
+  </header>
+
   <nav>
+    <!-- Hidden checkbox for hamburger toggle -->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <!-- Full-bleed wrapper for the hamburger (visible on small screens) -->
+    <div class="nav-hamburger-wrapper">
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
     <div class="nav-inner">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
