--- a/blogs.html
+++ b/blogs.html
@@ -10,8 +10,24 @@
   <link rel="stylesheet" href="blogs.css">
 </head>
 <body id="top">
-  <!-- Navigation (same as main page) -->
+  <header>
+    <div class="logo">
+      The Thinking Dev <span>&lt;/&gt;</span>
+    </div>
+  </header>
+
   <nav>
+    <!-- Hidden checkbox for hamburger toggle -->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <!-- Full-bleed wrapper for the hamburger (visible on small screens) -->
+    <div class="nav-hamburger-wrapper">
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+  <!-- Navigation (same as main page) -->
     <div class="nav-inner">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
