--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
       <div class="project-snippets">
         <!-- Project Snippet 1 -->
         <article class="project-snippet">
-          <img src="Images/project1.jpg" alt="Project One Preview">
+          <img src="Images/project1.png" alt="Project Preview">
           <h2>The IMDB Rating Predictor</h2>
           <p>A brief overview of The IMDB Ratings Predictor. This project feature uses machine learning to predict how a user would rate films in the top 100 IMDB, after the user rates 5 films. The more the user rate,s the more accurate the predictions will be.</p>
           <a href="project1.html">View Project</a>
